PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.3.0 RC 2
- Fixed bug #44409 (PDO::FETCH_SERIALIZE calls __construct()).
  (matteo at beccati dot com)
- Fixed bug #42362 - (HTTP status codes 204 and 304 should not be gzipped).
  (Scott, Edward Z. Yang)


24 Mar 2009, PHP 5.3.0 RC 1
- Upgraded bundled sqlite to version 3.6.11. (Scott)
- Upgraded bundled libmagic to 5.00 in the fileinfo extension. (Scott)

- Re-enabled phar for big-endian systems after fixing problems. (Greg)

- Added LIBXML_LOADED_VERSION constant (libxml2 version currently used). (Rob)
- Added JSON_FORCE_OBJECT flag to json_encode(). (Scott, Richard Quadling)

- Added support for CP850 encoding in mbstring extension.
  (Denis Giffeler, Moriyoshi)

- Fixed bug #47757 (rename JPG to JPEG in phpinfo). (Pierre)
- Fixed bug #47678 (Allow loadExtension to be disabled in SQLite3). (Scott)
- Fixed bug #47671 (Cloning SplObjectStorage instances). (Etienne)
- Fixed bug #47664 (get_class returns NULL instead of FALSE). (Dmitry)
- Fixed bug #47593 (interface_exists() returns false when using absolute 
  namespace path). (Kalle, Felipe)
- Fixed bug #47572 (Undefined constant causes segmentation fault). (Felipe)
- Fixed bug #47549 (get_defined_constants() return array with broken
  array categories). (Ilia)
- Fixed bug #47443 (metaphone('scratch') returns wrong result). (Felipe)
- Fixed bug #47438 (mysql_fetch_field ignores zero offset). (Johannes)
- Fixed bug #47398 (PDO_Firebird doesn't implements quoter correctly). (Felipe)
- Fixed bug #47390 (odbc_fetch_into - BC in php 5.3.0). (Felipe)
- Fixed bug #47359 (Use the expected unofficial mimetype for bmp files).
  (Scott)
- Fixed bug #47343 (gc_collect_cycles causes a segfault when called within a
  destructor in one case). (Dmitry)
- Fixed bug #47329 (Crash in garbage collector). (Dmitry)